src/objects/Sales_Snapshot__c.object
<CustomObject>
    <description>Snapshot for 12-week close rate and sales summary</description>
    <fields>
        <fullName>Lead_End__c</fullName>
        <description>End of 12-week period for counting leads</description>
        <label>Lead End</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Leads_Last_12_Weeks__c</fullName>
        <description>Number of leads in last 12 weeks</description>
        <label>Leads Last 12 Weeks</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunities_Last_12_Weeks__c</fullName>
        <label>Opportunities Last 12 Weeks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_End__c</fullName>
        <description>End of 12-week period for sales count</description>
        <label>Sales End</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Last_12_Weeks__c</fullName>
        <description>Number of sales in last 12 weeks</description>
        <label>Sales Last 12 Weeks</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <label>Sales Region</label>
        <picklist>
            <picklistValues>
                <fullName>MD Region</fullName>
                <color>#6600CC</color>
            </picklistValues>
            <picklistValues>
                <fullName>PA Region</fullName>
                <color>#33CC00</color>
            </picklistValues>
            <picklistValues>
                <fullName>WNY Region</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>MA Region</fullName>
                <color>#FFCC66</color>
            </picklistValues>
            <picklistValues>
                <fullName>OH Region</fullName>
                <color>#3366FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>NYC Region</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>CA Region</fullName>
                <color>#006600</color>
            </picklistValues>
            <picklistValues>
                <fullName>CT Region</fullName>
                <color>#33FFFF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <color>#999999</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_This_Week__c</fullName>
        <description>Number of sales in current week</description>
        <label>Sales This Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sales Snapshot</label>
    <nameField>
        <displayFormat>S{000000}</displayFormat>
        <label>Sales Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>